--- a/src/main/java/headhunt/app/app.fxml
+++ b/src/main/java/headhunt/app/app.fxml
@@ -11,14 +11,14 @@
          <top>
             <MenuBar BorderPane.alignment="CENTER">
               <menus>
-                <Menu mnemonicParsing="false" text="Database">
+                <Menu mnemonicParsing="false" text="File">
                   <items>
-                        <Menu mnemonicParsing="false" text="Open...">
-                          <items>
-                            <MenuItem mnemonicParsing="false" text="Database" />
-                          </items>
+                        <Menu mnemonicParsing="false" text="Database">
+                           <items>
+                            <MenuItem mnemonicParsing="false" text="Import..." />
+                            <MenuItem mnemonicParsing="false" text="Export..." />
+                           </items>
                         </Menu>
-                        <SeparatorMenuItem mnemonicParsing="false" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                     <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
                   </items>
