--- a/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
+++ b/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.userInfo.UserInfoPresenter">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="428.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.userInfo.UserInfoPresenter">
    <children>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="659.0" prefWidth="1051.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -25,7 +25,7 @@
                               <Insets left="10.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <GridPane maxHeight="1.7976931348623157E308" vgap="3.0">
+                        <GridPane maxHeight="1.7976931348623157E308" vgap="3.0" VBox.vgrow="NEVER">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="78.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="126.0" />
@@ -53,7 +53,7 @@
                               <Label fx:id="location" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Label fx:id="accountType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <Label fx:id="hyUri" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Label fx:id="hyLink" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Label fx:id="hyLink" onMouseClicked="#hyLinkClicked" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -63,7 +63,7 @@
                   </VBox>
                   <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="200.0" HBox.hgrow="ALWAYS">
+                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="93.0" prefHeight="408.0" prefWidth="374.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Label text="Websites:" />
                               <ListView fx:id="websites" prefHeight="306.0" prefWidth="242.0" />
@@ -73,8 +73,8 @@
                                  </padding></Label>
                               <TableView fx:id="activityTable" VBox.vgrow="ALWAYS">
                                 <columns>
-                                  <TableColumn fx:id="activityName" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="100.0" text="Name" />
-                                  <TableColumn fx:id="activityValue" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="100.0" text="Value" />
+                                  <TableColumn fx:id="activityName" minWidth="40.0" prefWidth="164.0" text="Name" />
+                                  <TableColumn fx:id="activityValue" minWidth="40.0" prefWidth="88.0" text="Value" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -82,10 +82,10 @@
                               </TableView>
                            </children>
                         </VBox>
-                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="639.0" prefWidth="375.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Label text="Biography:" />
-                              <TextArea fx:id="bio" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" wrapText="true" VBox.vgrow="ALWAYS" />
+                              <TextArea fx:id="bio" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="555.0" prefWidth="459.0" wrapText="true" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
