--- a/src/main/java/headhunt/app/views/scrapers/scrapers.fxml
+++ b/src/main/java/headhunt/app/views/scrapers/scrapers.fxml
@@ -4,13 +4,13 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.views.scrapers.ScrapersPresenter">
+<AnchorPane prefHeight="345.0" prefWidth="759.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.views.scrapers.ScrapersPresenter">
    <children>
-      <TreeTableView fx:id="scrapersTable" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TreeTableView fx:id="scrapersTable" prefHeight="345.0" prefWidth="759.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columns>
-            <TreeTableColumn fx:id="scraperName" editable="false" maxWidth="200.0" prefWidth="200.0" text="Name" />
-            <TreeTableColumn fx:id="scraperProgress" maxWidth="401.0" prefWidth="185.0" text="Progress" />
-            <TreeTableColumn fx:id="scraperInfo" maxWidth="401.0" prefWidth="214.0" text="Info" />
+            <TreeTableColumn fx:id="scraperName" editable="false" minWidth="50.0" prefWidth="214.0" text="Name" />
+            <TreeTableColumn fx:id="scraperProgress" minWidth="50.0" prefWidth="259.0" text="Progress" />
+            <TreeTableColumn fx:id="scraperInfo" minWidth="50.0" prefWidth="284.0" text="Info" />
          </columns>
          <columnResizePolicy>
             <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
