--- a/src/main/java/headhunt/app/dialogs/settings/settings.fxml
+++ b/src/main/java/headhunt/app/dialogs/settings/settings.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.settings.SettingsPresenter">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.settings.SettingsPresenter">
    <children>
-      <VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="155.0" prefWidth="381.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="185.0" prefWidth="381.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Vimeo API scraping:" VBox.vgrow="NEVER" />
             <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" />
-            <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
+            <GridPane hgap="10.0" VBox.vgrow="NEVER">
               <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="120.0" minWidth="120.0" />
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="40.0" />
@@ -20,6 +20,7 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
@@ -29,12 +30,15 @@
                   <Label text="On success wait:" GridPane.rowIndex="1" />
                   <TextField fx:id="vimeoOnSuccessWaitLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <Label text="min" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Label text="On error wait:" GridPane.rowIndex="2" />
+                  <TextField fx:id="vimeoOnErrorWaitLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="min" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                </children>
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
             </GridPane>
-            <HBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0" VBox.vgrow="NEVER">
+            <HBox alignment="TOP_RIGHT" spacing="5.0" VBox.vgrow="NEVER">
                <children>
                   <Button fx:id="okButton" mnemonicParsing="false" onAction="#ok" text="Ok" />
                   <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
