--- a/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
+++ b/src/main/java/headhunt/app/dialogs/userInfo/userinfo.fxml
@@ -11,24 +11,25 @@
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="428.0" prefWidth="798.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.app.dialogs.userInfo.UserInfoPresenter">
    <children>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="659.0" prefWidth="1051.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="481.0" prefWidth="798.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="NEVER">
+                  <VBox HBox.hgrow="NEVER">
                      <children>
                         <ImageView fx:id="image" fitHeight="250.0" fitWidth="250.0" pickOnBounds="true" VBox.vgrow="ALWAYS">
                            <image>
                               <Image url="/media/icon.png" />
                            </image>
                            <VBox.margin>
-                              <Insets left="10.0" top="10.0" />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </ImageView>
-                        <GridPane maxHeight="1.7976931348623157E308" vgap="3.0" VBox.vgrow="NEVER">
+                        <Separator prefWidth="200.0" />
+                        <GridPane vgap="3.0" VBox.vgrow="NEVER">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="78.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="126.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="0.0" prefWidth="68.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="172.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints maxHeight="1.7976931348623157E308" vgrow="SOMETIMES" />
@@ -46,21 +47,32 @@
                               <Label minHeight="19.0" text="Location:" GridPane.rowIndex="3" />
                               <Label text="Account:" GridPane.rowIndex="4" />
                               <Label minHeight="19.0" text="Uri:" GridPane.rowIndex="5" />
-                              <Label minHeight="19.0" text="Link:" GridPane.rowIndex="6" />
                               <Label fx:id="rank" minHeight="19.0" prefHeight="16.0" prefWidth="432.0" text="rank" GridPane.columnIndex="1" />
                               <Label fx:id="points" text="points" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Label fx:id="name" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <Label fx:id="location" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <Label fx:id="accountType" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <Label fx:id="hyUri" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <Label fx:id="hyLink" onMouseClicked="#hyLinkClicked" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <Label fx:id="uri" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <Label text="Link:" GridPane.rowIndex="6" />
+                              <Label fx:id="link" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                            </children>
                            <VBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </GridPane>
+                        <Separator prefWidth="200.0" />
+                        <Button fx:id="userPageButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#copyLink" text="Copy user link to clipboard...">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
                   </VBox>
+                  <Separator orientation="VERTICAL" prefHeight="200.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Separator>
                   <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" HBox.hgrow="ALWAYS">
                      <children>
                         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="93.0" prefHeight="408.0" prefWidth="374.0" HBox.hgrow="ALWAYS">
