--- a/src/main/java/headhunt/preloader/preloader.fxml
+++ b/src/main/java/headhunt/preloader/preloader.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -9,20 +12,43 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.preloader.PreloaderPresenter">
+<AnchorPane prefHeight="200.0" prefWidth="368.0" xmlns="http://javafx.com/javafx/8.0.66" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headhunt.preloader.PreloaderPresenter">
    <children>
-      <VBox layoutX="14.0" layoutY="-24.0" prefHeight="32.0" prefWidth="114.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="textLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Loading..." VBox.vgrow="ALWAYS">
+            <VBox alignment="CENTER" prefHeight="211.0" prefWidth="368.0">
+               <children>
+                  <Text fx:id="titleText" strokeType="OUTSIDE" strokeWidth="0.0" text="Headhunt">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Text>
+                  <Text fx:id="infoText" strokeType="OUTSIDE" strokeWidth="0.0" text="info" />
+               </children>
                <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
+                  <Insets />
                </VBox.margin>
-            </Label>
-            <ProgressBar fx:id="progressBar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" VBox.vgrow="ALWAYS">
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-            </ProgressBar>
+            </VBox>
+            <VBox alignment="BOTTOM_LEFT" prefHeight="4.0" prefWidth="368.0" spacing="5.0">
+               <children>
+                  <Text fx:id="loadingText" strokeType="OUTSIDE" strokeWidth="0.0" text="Loading...">
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ProgressBar fx:id="progressBar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="1.0" scaleY="0.5" VBox.vgrow="NEVER">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="-10.0" left="-4.0" right="-4.0" />
+                     </padding>
+                     <effect>
+                        <Blend />
+                     </effect>
+                  </ProgressBar>
+               </children>
+            </VBox>
          </children>
       </VBox>
    </children>
