--- a/src/main/java/headhunt/app/app.fxml
+++ b/src/main/java/headhunt/app/app.fxml
@@ -47,8 +47,9 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                   <items>
-                        <MenuItem mnemonicParsing="false" text="Readme" />
-                    <MenuItem mnemonicParsing="false" text="About" />
+                        <MenuItem mnemonicParsing="false" onAction="#documentation" text="Documentation" />
+                        <MenuItem mnemonicParsing="false" onAction="#tutorials" text="Tutorials" />
+                    <MenuItem mnemonicParsing="false" onAction="#about" text="About" />
                   </items>
                 </Menu>
               </menus>
