--- a/src/main/java/headhunt/setup/views/finish/finish.fxml
+++ b/src/main/java/headhunt/setup/views/finish/finish.fxml
@@ -41,11 +41,23 @@
                      </children>
                   </TextFlow>
                   <Label text="Click Finish to close this wizard." />
-                  <CheckBox fx:id="readmeCheckBox" mnemonicParsing="false" text="Show Readme">
-                     <font>
-                        <Font size="12.0" />
-                     </font>
-                  </CheckBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
+                     <children>
+                        <CheckBox fx:id="readmeCheckBox" mnemonicParsing="false" text="Show Readme">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="tutorialCheckBox" mnemonicParsing="false" text="Show Tutorial">
+                           <font>
+                              <Font size="12.0" />
+                           </font>
+                        </CheckBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="15.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
